--- a/src/templates/chart/index.html.twig
+++ b/src/templates/chart/index.html.twig
@@ -7,6 +7,6 @@
 
     <h3>Temperature</h3>
     <div class="chart">
-        <svg></svg>
+        <svg><g class="points"></g></svg>
     </div>
 {% endblock %}
